--- a/src/global.css
+++ b/src/global.css
@@ -25,20 +25,20 @@
 body {
   background-color: var(--clr-neutral-800);
   color: var(--clr-neutral-000);
-  display: flex;
-  flex-direction: column;
   font-family: var(--ff-sans);
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
   min-height: 100vh;
   & > * {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-inline: 2rem;
+    /* width: 100%; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* padding-inline: 2rem; */
   }
 }
-
+/* 
 header {
   padding-block: 2rem;
 }
@@ -54,10 +54,10 @@ footer {
 
 .logo {
   font-size: var(--fs-xlarge);
-}
+} */
 
 .wrapper {
-  width: min(100%, 1000px);
+  max-width: min(100%, 1000px);
 }
 
 button {
