--- a/src/pages/quiz/index.css
+++ b/src/pages/quiz/index.css
@@ -1,22 +1,48 @@
-#app {
-  display: grid;
-  grid-template-columns: 2rem 1fr auto;
-  grid-template-rows: auto 1fr auto;
-  gap: 1rem;
-  padding-block: 2rem;
-  flex-grow: 1;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  & > * {
+    width: 100%;
+  }
+  & > .wrapper {
+    padding-inline: 2rem;
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1fr;
+    gap: 1rem;
+  }
 }
 
-.progress-bar-container {
+/* HEADER ------------------------------------------------------ */
+
+header {
+  grid-column: 1 / span 3;
+  padding-block: 2rem;
   display: grid;
   grid-template-columns: subgrid;
-  gap: 1rem;
+  .wrapper {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / span 3;
+    align-items: center;
+  }
+}
+
+.close-button {
+  border: none;
+  display: flex;
   align-items: center;
-  grid-column: span 3;
+  justify-content: center;
+  min-width: 2rem;
+  min-height: 2rem;
+  background: none;
+  padding: 0;
 }
 
 .progress-bar {
-  width: 100%;
   border: 1px solid var(--clr-neutral-000);
   border-radius: 100vw;
   height: 1.5rem;
@@ -27,22 +53,11 @@
   }
 }
 
-.close-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  min-width: 2rem;
-  min-height: 2rem;
-  aspect-ratio: 1;
-  background: none;
-  padding: 0;
-}
+/* MAIN ------------------------------------------------------ */
 
-.questions-container {
-  display: flex;
-  align-items: center;
+main {
   grid-column: 2;
+  place-content: center;
 }
 
 .question-container {
@@ -51,19 +66,6 @@
   gap: 2rem;
   font-size: var(--fs-large);
   text-wrap: pretty;
-}
-
-.quiz-footer {
-  grid-column: 1 / span 3;
-  grid-row: 3;
-  display: flex;
-  gap: 1rem;
-  justify-content: space-between;
-  border-top: 1px solid var(--clr-neutral-000);
-  padding-block-start: 2rem;
-  button {
-    width: 7rem;
-  }
 }
 
 .answers-container {
@@ -87,21 +89,30 @@
   }
 }
 
-header {
-  display: none;
-}
+/* FOOTER ------------------------------------------------------ */
 
 footer {
+  padding-inline: 2rem;
   border-top: 1px solid var(--clr-neutral-000);
-  /* display: none; */
+  display: flex;
+  justify-content: center;
+  padding-block: 2rem;
+  .wrapper {
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+  button {
+    width: 7rem;
+  }
 }
 
+/* MEDIA QUERIES ------------------------------------------------------ */
+
 @media (max-width: 700px) {
-  .logo {
-    font-size: var(--fs-large);
-  }
-  .questions-container {
-    grid-column: span 3;
+  main {
+    grid-column: 1 / span 3;
   }
   .question-container {
     font-size: var(--fs-medium);
