--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 :root {
   /* COLORS */
   --clr-neutral-000: #ffffff;
+  --clr-neutral-700: #2b2b2b;
   --clr-neutral-800: #1e1e1e;
 
   /* FONT FAMILIES */
@@ -69,6 +70,9 @@ button {
   border: 1px solid var(--clr-neutral-000);
   background: var(--clr-neutral-800);
   color: var(--clr-neutral-000);
+  &[disabled] {
+    opacity: 0.5;
+  }
 }
 
 img {
