--- a/src/global.css
+++ b/src/global.css
@@ -73,6 +73,9 @@ button {
   &[disabled] {
     opacity: 0.5;
   }
+  &:not([disabled]):hover {
+    background-color: var(--clr-neutral-700);
+  }
 }
 
 img {
