--- a/src/global.css
+++ b/src/global.css
@@ -111,7 +111,7 @@ label {
 }
 
 dialog {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
