--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,8 @@
   --clr-neutral-700: #2b2b2b;
   --clr-neutral-800: #1e1e1e;
 
+  --clr-primary: #007bff;
+
   /* FONT FAMILIES */
   --ff-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -123,6 +125,14 @@ dialog {
   padding: 2rem;
   border-radius: 1rem;
   border: none;
+}
+
+a {
+  color: var(--clr-primary);
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 /* MEDIA QUERIES ------------------------------------------------------ */
