--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -26,6 +26,12 @@ body {
 
 header {
   padding-block: 2rem;
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
 }
 
 main {
