refactor: paragraphs on home page alignment + source code link

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -32,6 +32,10 @@ header {
     align-items: center;
     gap: 1rem;
   }
+  p {
+    text-wrap: balance;
+    text-align: center;
+  }
 }
 
 main {
