--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
   /* COLORS */
   --clr-neutral-000: #ffffff;
   --clr-neutral-300: #b9b9b9;
+  --clr-neutral-500: #6c757d;
   --clr-neutral-700: #2b2b2b;
   --clr-neutral-800: #1e1e1e;
 
