--- a/src/pages/quiz/index.css
+++ b/src/pages/quiz/index.css
@@ -59,6 +59,9 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .score__label {
+    font-size: var(--fs-small);
+  }
 }
 
 /* MAIN ------------------------------------------------------ */
@@ -98,18 +101,18 @@ main {
     justify-content: center;
   }
   &.correct {
-    border-color: green;
+    border-color: var(--clr-correct);
     opacity: 1;
   }
   &.incorrect {
-    border-color: red;
+    border-color: var(--clr-incorrect);
   }
 }
 
 /* FOOTER ------------------------------------------------------ */
 
 footer {
-  border-top: 1px solid var(--clr-neutral-000);
+  border-top: 1px solid var(--clr-neutral-500);
   display: flex;
   justify-content: center;
   padding-block: 2rem;
