--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,9 @@
   --clr-neutral-700: #2b2b2b;
   --clr-neutral-800: #1e1e1e;
 
-  --clr-primary: #007bff;
+  /* --clr-primary: #007bff; */
+  --clr-primary: #1db16c;
+  --clr-secondary: #0d633b;
   --clr-correct: #1db16c;
   --clr-incorrect: #dc3545;
 
@@ -79,6 +81,7 @@ button {
   color: var(--clr-neutral-000);
   &[disabled] {
     opacity: 0.5;
+    cursor: initial;
   }
   &:not([disabled]):hover {
     background-color: var(--clr-neutral-700);
@@ -136,6 +139,10 @@ a {
   &:hover {
     text-decoration: underline;
   }
+}
+
+:focus {
+  outline-color: var(--clr-primary);
 }
 
 /* MEDIA QUERIES ------------------------------------------------------ */
