--- a/src/pages/quiz/index.css
+++ b/src/pages/quiz/index.css
@@ -43,14 +43,44 @@ header {
 }
 
 .progress-bar {
-  border: 1px solid var(--clr-neutral-000);
+  border: 1px solid var(--clr-neutral-500);
   border-radius: 100vw;
   height: 1.5rem;
   .progress-bar__progress {
     transition: width 0.5s ease-in-out;
-    background-color: var(--clr-neutral-000);
+    /* background-color: var(--clr-neutral-000); */
+    background-color: var(--clr-secondary);
+    overflow: clip;
+    /* background-color: purple; */
     border-radius: inherit;
     height: 100%;
+
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      overflow: clip;
+      animation: progress-bar-background 2s infinite linear;
+      background: linear-gradient(
+        to right,
+        transparent 0%,
+        /* transparent 15%, */ var(--clr-correct) 50%,
+        /* transparent 85%, */ transparent 100%
+      );
+    }
+  }
+}
+
+@keyframes progress-bar-background {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
   }
 }
 
