--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -96,6 +96,8 @@ dialog {
 
 .category-name {
   text-wrap: pretty;
+  font-weight: bold;
+  font-size: var(--fs-small);
 }
 
 .category-button {
@@ -103,7 +105,6 @@ dialog {
   align-items: center;
   width: 100%;
   gap: 0.5rem;
-  align-items: center;
 }
 
 @media (max-width: 700px) {
